--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     </head>
     <body>
         <script src="main.js"></script>
+        <h1> Go check console in developer section</h1>
     </body>
 </html>
